--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,39 +1,81 @@
+@mixin transition($transition...) {
+    -moz-transition:    $transition;
+    -o-transition:      $transition;
+    -webkit-transition: $transition;
+    transition:         $transition;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+body {
+    border: none;
+    color: #black;
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background-size: 400% 400%;
+    -webkit-animation: Gradient 15s ease infinite;
+    animation: Gradient 15s ease infinite;
+}
+
 .MainContainer {
     display: flex;
+    position: relative;
+    top: 80px;
+    left: 0%;
     justify-content: center;
-  }
-  
-  .TODO {
-    width: 300px;
-    display: inline-block;
-    text-align: center;
-  }
-  
-  .TODOHeader {
-    height: 45px;
-    border: 1px solid black;
-    display: block;
-  }
-  
-  .TODOMiddleSection {
-    height: 300px;
-    border: thin;
-    border: 1px solid black;
-    display: block;
-  }
-  
-  .TODOBottomSection {
-    height: 40px;
-    border: 1px solid black;
-    display: block;
-  }
-  
-  .close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
-  }
+    color: #fff;
+}
+
+.TODO {
+  width: 300px;
+  display: inline-block;
+  text-align: center;
+}
+
+.TODOHeader {
+  height: 45px;
+  border: 1px solid black;
+  display: block;
+}
+
+.TODOMiddleSection {
+  height: 300px;
+  border: thin;
+  display: block;
+}
+
+.TODOBottomSection {
+  height: 200px;
+  display: block;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
   
   /* Include the padding and border in an element's total width and height */
   * {
@@ -42,128 +84,142 @@
   
   /* Remove margins and padding from the list */
   ul {
+    list-style: none;
+    padding: 0;
+    list-style-type: none;
     margin: 0.25;
-    padding: 0.25;
-    max-height:280px;/*The important part*/
+    max-height:300px;/*The important part*/
+    width:300px;
     overflow-y:auto;/*Also...*/
     overflow-x:hidden;/*And the end of the important part*/
+    display:inline-block;
   }
-  
-  /* Style the list items */
-  ul li {
-    cursor: pointer;
-    position: relative;
-    padding: 12px 8px 12px 40px;
-    background: #eee;
-    font-size: 18px;
-    transition: 0.2s;
-    /* make the list items unselectable */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  
-  /* Set all odd list items to a different color (zebra-stripes) */
-  ul li:nth-child(odd) {
-    background: #f9f9f9;
-  }
-  
-  /* Darker background-color on hover */
-  ul li:hover {
-    background: #ddd;
-  }
-  
-  /* When clicked on, add a background color and strike out text */
-  ul li.checked {
-    background: #888;
-    color: #fff;
-    text-decoration: line-through;
-  }
-  
-  /* Add a "checked" mark when clicked on */
-  ul li.checked::before {
-    content: '';
-    position: absolute;
-    border-color: #fff;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    top: 10px;
-    left: 16px;
-    transform: rotate(45deg);
-    height: 15px;
-    width: 7px;
-  }
-  
-  /* Style the close button */
-  .close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
-  }
-  
-  .close:hover {
-    background-color: #f44336;
-    color: white;
-  }
-  
-  /* Style the header */
-  .header {
-    background-color: #f44336;
-    padding: 30px 40px;
-    color: white;
-    text-align: center;
-  }
-  
-  /* Clear floats after the header */
-  .header:after {
+
+ul li:before {
     content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Style the input */
-  input {
-    margin: 0;
-    border: none;
-    border-radius: 0;
-    width: 75%;
-    padding: 10px;
+    line-height: 1em;
+    width: .5em;
+    height: .5em;
+    background-color: blue;
     float: left;
-    font-size: 16px;
-  }
+    margin: .25em .25em 0;
+    border-radius: 50%;
+}
+/* Style the list items */
+ul li {
+  cursor: pointer;
+  text-align: right;
+  position: right;
+  padding: 12px 8px 12px 5px;
+  font-size: 18px;
+  transition: 0.2s;
+  background:black;
+  /* make the list items unselectable */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+
+/* Set all odd list items to a different color (zebra-stripes) */
+ul li:nth-child(odd) {
+  background:green;
+}
+
+/* Darker background-color on hover */
+ul li:hover {
+  transition-duration: 3s;
+  background: #ddd;
+}
+
+/* When clicked on, add a background color and strike out text */
+ul li.checked {
+  background: #888;
+  color: #fff;
+  text-decoration: line-through;
+}
+
+/* Add a "checked" mark when clicked on */
+ul li.checked::before {
+  content: '';
+  position: left;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
   
-  /* Style the "Add" button */
-  .addBtn {
-    padding: 10px;
-    width: 25%;
-    height: 100%;
-    background: #d9d9d9;
-    color: #555;
-    border: none;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 0;
-    text-decoration: none;
-    display: inline-block;
-    background-color: #4CAF50; /* Green */
-  }
-  
-  .addBtn:hover {
-    background-color: lightgray;
-  }
+/* Style the close button */
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+/* Style the header */
+.header {
+  background-color: #f44336;
+  padding: 30px 40px;
+  color: white;
+  text-align: center;
+}
+
+/* Clear floats after the header */
+.header:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the input */
+input {
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 75%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
+  background-color: lightgray;
+}
+
+/* Style the "Add" button */
+.addBtn {
+  width: 25%;
+  height: 100%;
+  border: none;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.addBtn:hover {
+  background-color: black;
+}
 
 .delTodoItem {
   text-align: right;
   cursor: pointer;
-  border: none;
+  border: 2px solid black;
+  border-radius: 5px;
+  @include transition(background-color 1s .5s, color 2s);
 }
 
 .delTodoItem:hover {
-  background-color: red;
+  color: red; 
+  background-color: blue;
 }
 
 .todoDelSpan{
@@ -176,4 +232,5 @@
   width: 75%;
   vertical-align: middle;
   height: 100%;
+  background-color: lightgray;
 }
